erDiagram
    Employees ||--o{ EmployeePositions : has
    Employees ||--o{ EmployeePersonalDetails : has
    Employees ||--o{ EmployeePensionEnrollments : has
    Employees ||--o{ PayrollRecords : has
    Employees ||--o{ TaxCodes : has

    Departments ||--o{ EmployeePositions : has

    Positions ||--o{ EmployeePositions : has

    EmployeePositions ||--o{ TimeEntries : has
    EmployeePositions ||--o{ PayrollDetails : has

    PayPeriods ||--o{ TimeEntries : contains
    PayPeriods ||--o{ PayrollRecords : has

    PensionProviders ||--o{ PensionPlans : offers

    PensionPlans ||--o{ EmployeePensionEnrollments : has

    PayrollRecords ||--o{ PayrollDetails : contains
    PayrollRecords ||--o{ PensionContributions : has

    EmployeePensionEnrollments ||--o{ PensionContributions : generates

    Employees {
        SERIAL employeeId PK
        VARCHAR firstName
        VARCHAR lastName
        VARCHAR email
        DATE hireDate
        VARCHAR taxId
    }

    TaxCodes {
        SERIAL taxCodeId PK
        INTEGER employeeId FK
        VARCHAR taxCode
        DATE effectiveFrom
        DATE effectiveTo
        BOOLEAN isActive
    }

    Departments {
        SERIAL departmentId PK
        VARCHAR departmentName
        VARCHAR costCenter
    }

    Positions {
        SERIAL positionId PK
        VARCHAR title
        VARCHAR payGrade
        BOOLEAN isExempt
    }

    EmployeePositions {
        SERIAL employeePositionId PK
        INTEGER employeeId FK
        INTEGER positionId FK
        INTEGER departmentId FK
        INTEGER managerId FK
        BOOLEAN isPrimaryPosition
        NUMERIC hourlyRate
        NUMERIC annualSalary
    }

    PayPeriods {
        SERIAL payPeriodId PK
        DATE startDate
        DATE endDate
        DATE payDate
        VARCHAR periodType
    }

    TimeEntries {
        SERIAL timeEntryId PK
        INTEGER employeePositionId FK
        INTEGER payPeriodId FK
        DATE workDate
        NUMERIC hoursWorked
        NUMERIC overtimeHours
    }

    PensionProviders {
        SERIAL providerId PK
        VARCHAR providerName
        VARCHAR providerCode
    }

    PensionPlans {
        SERIAL planId PK
        INTEGER providerId FK
        VARCHAR planName
        NUMERIC employerMatchPercentage
    }

    EmployeePensionEnrollments {
        SERIAL enrollmentId PK
        INTEGER employeeId FK
        INTEGER planId FK
        NUMERIC employeeContributionPercentage
        DATE enrollmentDate
    }

    PayrollRecords {
        SERIAL payrollRecordId PK
        INTEGER employeeId FK
        INTEGER payPeriodId FK
        NUMERIC grossPay
        NUMERIC netPay
    }

    PayrollDetails {
        SERIAL payrollDetailId PK
        INTEGER payrollRecordId FK
        INTEGER employeePositionId FK
        VARCHAR earningType
        NUMERIC amount
    }

    PensionContributions {
        SERIAL contributionId PK
        INTEGER enrollmentId FK
        INTEGER payrollRecordId FK
        NUMERIC employeeContribution
        NUMERIC employerContribution
    }

    EmployeePersonalDetails {
        SERIAL personalDetailsId PK
        INTEGER employeeId FK
        DATE dateOfBirth
        VARCHAR addressLine1
        VARCHAR city
    }
